# sharepoint_api

./: .gitignore  pyproject.toml  requirements.in  requirements.txt
src/sharepoint_api/: sharepoint_client.py
tests/: test_0.py
