[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharepoint-api"
version = "0.1.5"
description = "Utility scripts for API and SharePoint automation"
authors = [{ name = "Joseph Marcos" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "requests",
    "msal",
    "pandas",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]
